--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </div>
       </div>
 
-      <hr class="featurette-divider">
+      <hr class="featurette-divider"  style="margin-top: 50px;">
 
       <div class="row featurette-2">
         <div class="col-md-4 ">
