--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="container main-block">
 
       <div class="row featurette">
-        <div class="col-md-4">
+        <div class="col-md-4 mb-2">
           <div id="carouselExampleIndicators0" class="carousel slide" data-bs-ride="carousel">
             <ol class="carousel-indicators">
               <li data-bs-target="#carouselExampleIndicators0" data-bs-slide-to="0" class="active"></li>
@@ -100,7 +100,7 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-4 order-md-2">
+        <div class="col-md-4 order-md-2 mb-2">
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <ol class="carousel-indicators">
               <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
@@ -128,7 +128,7 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-4">
+        <div class="col-md-4 mb-2">
           <div id="carouselExampleIndicators1" class="carousel slide" data-bs-ride="carousel">
             <ol class="carousel-indicators">
               <li data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="0" class="active"></li>
@@ -154,11 +154,11 @@
       <hr class="featurette-divider">
 
       <div class="row" style="display: flex; align-items:flex-end;">
-        <div class="col-md-5 order-md-2">
+        <div class="col-md-5 order-md-2 mb-2">
           <img src="assets/images/Semya_Daniil_Mozol_2.jpg" alt="" style="width: 100%;">
         </div>
 
-        <div class="col-md-7 order-md-1">
+        <div class="col-md-7 order-md-1 mb-3">
           <h2 class="featurette-heading">Семья - это опора каждого человека</h2>
           <p class="lead featurette-text">Родители, сестра Катя и бабушка Надя - самое дорогое, его вера и сила.</p>
         </div>
