Add load animation

--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
         <div class="col-md-5">
 
         </div>
+        <div class="load-animation-container">
+          <img class="load-animation" src="assets/animations/loading-2.gif" alt="animation" />
+        </div>
         <div class="grid-masonry grid-masonry-style">
           <a href="assets/images/Druzya.jpg">
             <img src="assets/images/Druzya.jpg" class="grid-item grid-item-style">
@@ -191,13 +194,16 @@
       <hr class="featurette-divider"  style="margin-top: 50px;">
 
       <div class="row featurette-2">
-        <div class="col-md-4 ">
+        <div class="col-md-4 mb-3">
           <h2 class="featurette-heading">Учёба превыше всего</h2>
           <p class="lead featurette-text">И самое важное для ДАНИЛЫ - учеба,
             стремление узнать что-то новое. Он учиться на 8, 9, 10. Всегда старается, много
             занимается дополнительно, с огромном желанием читает.</p>
         </div>
         <div class="col-md-7">
+          <div class="load-animation-container">
+            <img class="load-animation-2" src="assets/animations/loading-2.gif" alt="animation" />
+          </div>
           <div class="grid-masonry-2 grid-masonry-style">
             <a href="assets/images/Daniil_Mozol_class.jpg">
               <img src="assets/images/Daniil_Mozol_class.jpg" class="grid-item-2 grid-item-style-2">
@@ -228,7 +234,7 @@
 
 
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider mt-4">
 
     <!-- /END THE FEATURETTES -->
 
