Add intro load animation

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
   <!-- Интро -->
   <div class="intro-blur"></div>
+  <div class="intro-load-animation-container">
+    <img class="intro-load-animation" src="assets/animations/loading-2.gif" alt="animation" />
+  </div>
   <div class="intro">
     <h1 style="z-index: 110;">Меня зовут Даниил. Я учусь в 11 классе 27-й школы города Бреста. Я автор
       книги для детей "Я есть". Мне очень хочется поделиться своими новыми рассказами
@@ -41,7 +44,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Главная</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#">Книги</a>
@@ -255,6 +258,7 @@
   <script src="assets/bootstrap-5.1.3/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
   <script src="assets/baguetteBox/baguetteBox.min.js"></script>
+  <script src="assets/js/loadPhotos.js"></script>
   <script src="assets/js/photoGrid.js"></script>
   <script src="assets/js/baguetteBox.js"></script>
 
