Remove intro load animation

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
   <!-- Интро -->
   <div class="intro-blur"></div>
-  <div class="intro-load-animation-container">
+  <!-- <div class="intro-load-animation-container">
     <img class="intro-load-animation" src="assets/animations/loading-2.gif" alt="animation" />
-  </div>
+  </div> -->
   <div class="intro">
     <h1 style="z-index: 110;">Меня зовут Даниил. Я учусь в 11 классе 27-й школы города Бреста. Я автор
       книги для детей "Я есть". Мне очень хочется поделиться своими новыми рассказами
