Fix hr // add books and contacts html pages

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
               <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Книги</a>
+              <a class="nav-link" aria-current="page" href="books.html">Книги</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Контакты</a>
+              <a class="nav-link" aria-current="page" href="contacts.html">Контакты</a>
             </li>
 
           </ul>
@@ -225,33 +225,16 @@
 
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
     <hr class="featurette-divider mt-4">
 
-    <!-- /END THE FEATURETTES -->
-
-    </div><!-- /.container -->
-
-
-    <!-- FOOTER -->
-      
-    <footer class="container" style="display: flex; justify-content: space-between; align-items: center; padding-bottom: 1.5em;">
-      <div>
-      <a href="https://grambee.cf/web/site/about.html" id="copyright" class="link-info fs-4 text-decoration-none"></a>
-      </div>
-      <a href="#" class="btn btn-secondary" style="color:white; text-decoration: none">Вернуться вверх</a>
-    </footer>
+    <!-- FOOTER --> 
+      <footer class="container"
+        style="display: flex; justify-content: space-between; align-items: center; padding-bottom: 1.5em;">
+        <div>
+          <a href="https://grambee.cf/web/site/about.html" id="copyright" class="link-info fs-4 text-decoration-none"></a>
+        </div>
+        <a href="#" class="btn btn-secondary" style="color:white; text-decoration: none">Вернуться вверх</a>
+      </footer>
   </main>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
