Add content in books.html page // Change grid in index.html page

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="col-md-7">
           <h2 class="featurette-heading">Я есть</h2>
-          <p class="lead featurette-text">Меня зовут Данила. Мне пятнадцать лет. люблю путешествовать и радуюсь каждому
+          <p class="lead featurette-text">Меня зовут Данила. Мне восемнадцать лет. люблю путешествовать и радуюсь каждому
             дню своей жизни.
             Мои родители, сестра Катюша, единственная бабушка
             Надя - это моя вера и сила.
@@ -203,7 +203,7 @@
             стремление узнать что-то новое. Он учиться на 8, 9, 10. Всегда старается, много
             занимается дополнительно, с огромном желанием читает.</p>
         </div>
-        <div class="col-md-7">
+        <div class="col-md-8">
           <div class="load-animation-container">
             <img class="load-animation-2" src="assets/animations/loading-2.gif" alt="animation" />
           </div>
