--- a/books.html
+++ b/books.html
@@ -40,23 +40,45 @@
     </nav>
   </header>
 
-  <main style="margin-top: 5em;">
+  <main style="margin-top: 5em; display: flex; flex-direction: column; ">
     <div class="container main-block">
-
+      <div class="books-grid">
+        <div class="card book-card">
+          <img src="assets/images/ya_est.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Я есть</h5>
+            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.
+            </p> -->
+            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+          </div>
+        </div>  
+        <div class="card book-card">
+          <img src="assets/images/ya_est.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Я есть</h5>
+            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a> -->
+          </div>
+        </div>
+      </div>
 
     </div>
 
 
-    
+
 
 
     <!-- FOOTER -->
-      
+
     <div class="footer-container">
       <footer class="container"
         style="display: flex; justify-content: space-between; align-items: center; padding-bottom: 1.5em;">
         <div>
-          <a href="https://grambee.cf/web/site/about.html" id="copyright" class="link-info fs-4 text-decoration-none"></a>
+          <a href="https://grambee.cf/web/site/about.html" id="copyright"
+            class="link-info fs-4 text-decoration-none"></a>
         </div>
         <a href="#" class="btn btn-secondary" style="color:white; text-decoration: none">Вернуться вверх</a>
       </footer>
@@ -67,15 +89,14 @@
   <script src="assets/bootstrap-5.1.3/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
   <script src="assets/baguetteBox/baguetteBox.min.js"></script>
-  <script src="assets/js/loadPhotos.js"></script>
-  <script src="assets/js/photoGrid.js"></script>
-  <script src="assets/js/baguetteBox.js"></script>
+  <!-- <script src="assets/js/booksGrid.js"></script> -->
 
-  <script> 
-  var today = new Date();
-  var year = today.getFullYear();
-  document.getElementById("copyright").innerHTML = "&copy" + "Mercury Co. " + year;  
+  <script>
+    var today = new Date();
+    var year = today.getFullYear();
+    document.getElementById("copyright").innerHTML = "&copy" + "Mercury Co. " + year;  
   </script>
 
 </body>
+
 </html>
