Change second book photo

--- a/books.html
+++ b/books.html
@@ -46,17 +46,17 @@
         <div class="card book-card">
           <img src="assets/images/ya_est.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Я есть</h5>
+            <h5 class="card-title">Я есть<br> (Первая книга)</h5>
             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.
             </p> -->
             <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
           </div>
-        </div>  
+        </div>
         <div class="card book-card">
-          <img src="assets/images/ya_est.jpg" class="card-img-top" alt="...">
+          <img src="assets/images/ya_est_2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Я есть</h5>
+            <h5 class="card-title">Я есть<br> (Книга 2)</h5>
             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.
             </p>
